# judge-lab

./: .gitignore  LAUNCH.md  LICENSE  PAPER.md  README.md  pyproject.toml
examples/: humaneval_ab.py
src/judge_lab/: __init__.py  best_of_n.py  conformal.py  hygiene.py  llm_judge.py  pairwise.py  process_reward.py  sandbox.py
tools/secrets/: install_hooks.sh  scan.py  test_scan.py
