[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "judge-lab"
version = "0.1.0"
description = "Pre-registered, brutally honest LLM evaluation. Bradley-Terry pairwise audits + conformal abstention + judge bias detection + execution-based eval."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Sintex.AI"},
]
keywords = [
    "llm", "evaluation", "judge", "bradley-terry",
    "conformal-prediction", "humaneval", "ai-safety",
    "rag-evaluation", "icl-audit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://sintex.ai"
Repository = "https://github.com/ElromEvedElElyon/judge-lab"
Issues = "https://github.com/ElromEvedElElyon/judge-lab/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "tools"]
